kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: delete-asyncstatus-project-in-case-inactivity
